# Qt-Crawler

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md
cmake/: Conan.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt  Configuration.cpp  QtCrawlerApp.cpp  version.h  version.h.in
src/Common/: ExceptionHandler.h  Namespace.h  Types.h
src/IO/: FileSystemWriter.cpp  FileSystemWriter.hpp  Writer.hpp
src/Networking/: Client.hpp  CurlAdapter.cpp  CurlAdapter.hpp  HtmlProvider.hpp  HttpClient.cpp  HttpClient.hpp  NetworkingProvider.hpp
src/Parser/: GumboParserAdapter.cpp  GumboParserAdapter.hpp  HtmlParser.hpp
src/include/qt_crawler/: Configuration.hpp  ConfigurationKeys.hpp  QtCrawler.hpp  QtCrawlerApp.hpp
tests/: CMakeLists.txt  UT_Networking_CurlAdapter.cpp  UT_Networking_HttpClient.cpp  UT_QtCrawlerApp.cpp
tests/Mocks/: ClientMock.hpp  ConfigurationMock.hpp  HtmlParserMock.hpp  HtmlProviderMock.hpp  NetworkingProviderMock.hpp  WriterMock.hpp
